# GladiatorSimulation

./: .gitignore  CMakeLists.txt  README.MD  main.cpp  testMultiGame.cpp
Gladiator/: StrengthVector.cpp  StrengthVector.h
Simulation/: MultiIndexGeneric.cpp  MultiIndexGeneric.h  MultiVector.cpp  MultiVector.h  QualityEstimation.cpp  QualityEstimation.h  Simulation.cpp  Simulation.h  SimulationOld.cpp  SimulationOld.h
